# crewai-agents

./: .gitignore  Makefile  app.py  pyproject.toml  teste.ipynb
src/crew/video/: video_crew.py
src/crew/video/agents/: character_designer.py  scene_director.py  story_creator.py  voice_script.py
src/utils/: schemas.py
